G X and type in numbers modifies the z axis as well #81096

Closed
opened 2020-09-23 17:06:38 +02:00 by Zijun Zhou · 16 comments
Contributor

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-22 18:36, hash: 358a8e00bd
Worked: 2.90

Short description of error
After pressing G X and numbers, the object moves not only along the x axis with the number typed, but also the z axis with a much greater number.

Exact steps for others to reproduce the error
Based on the default startup

  1. Select the default cube and press g x
  2. type in any number, like 1
  3. you can see the cube disappears
  4. press enter to comfirm
  5. press N and look at its location, it is now at: (1 m, 0 m, -99107229348659200 m), which means it is all the way down there along the z axis.
    See the video as an example:
    G X Bug.mp4
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-22 18:36, hash: `358a8e00bd` Worked: 2.90 **Short description of error** After pressing G X and numbers, the object moves not only along the x axis with the number typed, but also the z axis with a much greater number. **Exact steps for others to reproduce the error** Based on the default startup 1. Select the default cube and press g x 2. type in any number, like 1 3. you can see the cube disappears 4. press enter to comfirm 5. press N and look at its location, it is now at: (1 m, 0 m, -99107229348659200 m), which means it is all the way down there along the z axis. See the video as an example: [G X Bug.mp4](https://archive.blender.org/developer/F8912279/G_X_Bug.mp4)
Author
Contributor

Added subscriber: @Eary

Added subscriber: @Eary

Added subscriber: @Russ1642

Added subscriber: @Russ1642

For me the z location goes to -110317169690857735127223106535424 m. Cool. Default cubes are faster than the speed of light.

For me the z location goes to -110317169690857735127223106535424 m. Cool. Default cubes are faster than the speed of light.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

I swear that the first time I tried to reproduce this I had the same results, but I haven't been able to reproduce it since. I've tried deleting, undoing, moving multiple objects, other directions, other view angles, and I can't reproduce this. Hopefully we can find something that triggers this.

I swear that the first time I tried to reproduce this I had the same results, but I haven't been able to reproduce it since. I've tried deleting, undoing, moving multiple objects, other directions, other view angles, and I can't reproduce this. Hopefully we can find something that triggers this.

Added subscriber: @AFWS

Added subscriber: @AFWS

In #81096#1021878, @HooglyBoogly wrote:
I swear that the first time I tried to reproduce this I had the same results, but I haven't been able to reproduce it since. I've tried deleting, undoing, moving multiple objects, other directions, other view angles, and I can't reproduce this. Hopefully we can find something that triggers this.

Should be as simple as G > X > 1. Z only went -29.381 m for me. It looks like it only happens with X.

Edit:
Looks like a one hit wonder. If you restart Blender, it doesn't do it anymore.

Tried a different Blender and went beyond the numbers. This is the hash for this one ab7608af1bd4

nan_location.jpg

> In #81096#1021878, @HooglyBoogly wrote: > I swear that the first time I tried to reproduce this I had the same results, but I haven't been able to reproduce it since. I've tried deleting, undoing, moving multiple objects, other directions, other view angles, and I can't reproduce this. Hopefully we can find something that triggers this. Should be as simple as G > X > 1. Z only went -29.381 m for me. It looks like it only happens with X. Edit: Looks like a one hit wonder. If you restart Blender, it doesn't do it anymore. Tried a different Blender and went beyond the numbers. This is the hash for this one `ab7608af1bd4` ![nan_location.jpg](https://archive.blender.org/developer/F8912777/nan_location.jpg)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

I have seen it as well, but also having a real hard time to reproduce.

I have seen it as well, but also having a real hard time to reproduce.
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

@mano-wii: does this ring a bell?

@mano-wii: does this ring a bell?
Member

I can reliably reproduce the above in 0f61b27e93, there have been some related commits since though.

Also: in current master (5b612e788c), constraining on a local axis and then using number inputs ({key G X X 1}) will still transform in global space.
(this seems related, but will report separately since this is reproducable easily)

I can reliably reproduce the above in 0f61b27e93, there have been some related commits since though. Also: in current master (5b612e788c), constraining on a local axis and then using number inputs ({key G X X 1}) will still transform in global space. (this seems related, but will report separately since this is reproducable easily)
Member

In #81096#1022380, @lichtwerk wrote:
(this seems related, but will report separately since this is reproducable easily)

Reported #81127 (Transform constraints on a local axis with input numbers transforms in global space)

> In #81096#1022380, @lichtwerk wrote: > (this seems related, but will report separately since this is reproducable easily) Reported #81127 (Transform constraints on a local axis with input numbers transforms in global space)

This issue was referenced by 58dc059ad3

This issue was referenced by 58dc059ad32db15b43f24d235b6f3a5785a6433a

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-09-24 15:46:21 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81096
No description provided.