Fix T81096, T81127: Errors with the typed value for x-axis constrain

`applyNumInput` does not write all axis values and does not consider
the orientation.